# rocket_app_starterkit

./: Makefile  README.md  docker-compose.yml  lefthook.yml
app_frontend/: index.html  package-lock.json  package.json  vite.config.ts
app_frontend/login/: index.html
app_frontend/src/index/: index.html
app_frontend/src/login/: index.html
app_server/: .env  Cargo.toml  Rocket.toml
app_server/migrations/2021-05-08-124002_create_sample_table/: up.sql
app_server/src/: main.rs  redis.rs  schema.rs
app_subscriber/: Cargo.toml
app_subscriber/src/: main.rs
shared/: Cargo.toml
shared/config/: base.toml
shared/src/: lib.rs  settings.rs
