[package]
name = "app_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
diesel = { version = "1.3", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.3"
log = "0.4"
r2d2_redis = "0.14.0"
shared = { path = "../shared" }
lazy_static = "1.4.0"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json", "serve", "diesel_postgres_pool", "redis_pool"]
