[package]
name = "app_subscriber"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.20.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
log = "0.4"
env_logger = "0.8.3"
shared = { path = "../shared" }
